--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="reset.css" />
 </head>
 <body>
-    <header class="header">
-        <h1 class="game-title">
-            PARROT CARD GAME
-        </h1>
+    <header class="top">
+        <header class="header">
+            <h1 class="game-title">
+                PARROT CARD GAME
+            </h1>
+        </header>
     </header>
     <main class="site">
         <ul class="container"></ul>
