feat: added function of gaming logic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </header>
     <main class="site">
         <ul class="container"></ul>
+        <article class="replay">
+            <div class="configButtom hidden"></div>
+        </article>
     </main>
     <script src="script.js"></script>
 </body>
